==> hongyanmin/test1/ICT/Driver/DS18B20/ds18b20.c <==
#include "ds18b20.h"
#include "delay.h"	


//初始化DS18B20的IO口 DQ 同时检测DS的存在//返回1:不存在//返回0:存在    	 
u8 DS18B20_Init(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB, ENABLE);	 //使能时钟 

	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;  //开漏输出
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;//时钟速率
	GPIO_Init(GPIOB, &GPIO_InitStructure);

	GPIO_SetBits(GPIOB,GPIO_Pin_3);    //输出1
	DS18B20_Rst();
	return DS18B20_Check();
}  

//SET OUTPUT	
void DS18B20_IO_OUT(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;  //开漏输出
	GPIO_InitStructure.GPIO_OType = GPIO_OType_PP;//GPIO_OType_PP;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;//时钟速率
	GPIO_Init(GPIOB, &GPIO_InitStructure);
}


//SET INPUT	 
void DS18B20_IO_IN(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = GPIO_Pin_3;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;  //输入
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;//时钟速率
	GPIO_Init(GPIOB, &GPIO_InitStructure);	
}


//开始温度转换
void DS18B20_Start(void)			// ds1820 start convert
{   						               
	DS18B20_Rst();	   
	DS18B20_Check();	 
	DS18B20_Write_Byte(0xcc);		// skip rom
	DS18B20_Write_Byte(0x44);		// convert
} 


//复位DS18B20
void DS18B20_Rst(void)	   
{
	
	//delay_us(50); 
	DS18B20_IO_OUT(); 		//SET OUTPUT
  DS18B20_DQ_OUT=0; 	//拉低DQ

	delay_us(750);    		//拉低750us
	DS18B20_DQ_OUT=1; 	//DQ=1 

	delay_us(15);     		//40US
}


//等待DS18B20的回应 //返回1:未检测到DS18B20的存在//返回0:存在
u8 DS18B20_Check(void) 	   
{   
	u8 retry=0;
	DS18B20_IO_IN();//SET INPUT	 
	while (DS18B20_DQ_IN()&&retry<200)
	{
		retry++;
		delay_us(1);
	};	 
	if(retry>=200)return 1;
	else retry=0;
	while (!DS18B20_DQ_IN()&&retry<240)
	{
		retry++;
		delay_us(1);
	};
	if(retry>=240)return 1;	    
	return 0;
}


//写一个字节到DS18B20 //dat：要写入的字节
void DS18B20_Write_Byte(u8 dat)     
{             


//	u8 j;
//	u8 testb;
//	DS18B20_IO_OUT();				//SET OUTPUT;
//	for (j=1;j<=8;j++) 
//	{
//			testb=dat&0x01;
//			dat=dat>>1;
//		if (testb) 
//		{
//			    DS18B20_DQ_OUT=0; 	//拉低DQ

//			delay_us(5); 			//2                           
//			    DS18B20_DQ_OUT=1; 	//拉低DQ

//			delay_us(65); 			//60            
//		}
//		else 
//		{
//			DS18B20_DQ_OUT=0; 	//拉低DQ

//			delay_us(65); 			//60            
//			DS18B20_DQ_OUT=1; 	//拉低DQ

//			delay_us(5); 			//2                         
//		}
//	}

	u8 j;
	u8 testb;
	DS18B20_IO_OUT();				//SET OUTPUT;
	for (j=1;j<=8;j++) 
	{
			testb=dat&0x01;
			dat=dat>>1;
		if (testb) 
		{
			    DS18B20_DQ_OUT=0; 	//拉低DQ

			delay_us(5); 			//2                           
			    DS18B20_DQ_OUT=1; 	//拉低DQ

			delay_us(65); 			//60            
		}
		else 
		{
			DS18B20_DQ_OUT=0; 	//拉低DQ

			delay_us(65); 			//60            
			DS18B20_DQ_OUT=1; 	//拉低DQ

			delay_us(5); 			//2                         
		}
	}
}


//从DS18B20读取一个位 //返回值：1/0
u8 DS18B20_Read_Bit(void) 		// read one bit
{
//	u8 data;
//	DS18B20_IO_OUT();			//SET OUTPUT
//	DS18B20_DQ_OUT=0; 	//拉低DQ
//	delay_us(5);				//2
//	DS18B20_DQ_OUT=1; 	//拉低DQ
//	DS18B20_IO_IN();			//SET INPUT
//	delay_us(5);				//12
//	if(DS18B20_DQ_IN())data=1;
//	else data=0;	 
//	delay_us(65);				//50           
//	return data;
	
		u8 data;
	DS18B20_IO_OUT();			//SET OUTPUT
	DS18B20_DQ_OUT=0; 	//拉低DQ
	delay_us(5);				//2
	DS18B20_DQ_OUT=1; 	//拉低DQ
	DS18B20_IO_IN();			//SET INPUT
	delay_us(5);				//12
	if(DS18B20_DQ_IN())data=1;
	else data=0;	 
	delay_us(65);				//50           
	return data;
}


//从DS18B20读取一个字节 //返回值：读到的数据
u8 DS18B20_Read_Byte(void)    // read one byte
{        
    u8 i,j,dat;
    dat=0;
	for (i=1;i<=8;i++) 
	{
        j=DS18B20_Read_Bit();
        dat=(j<<7)|(dat>>1);
    }						    
    return dat;
}

//从ds18b20得到温度值 //精度：0.1C //返回值：温度值 （-550~1250） 
short DS18B20_Get_Temp(void)
{
	u8 temp;
	u8 TL,TH;
	short tem;
	//float temperat;
	DS18B20_Start();                    // ds1820 start convert

	//delay_ms(1000);
	
	DS18B20_Rst();
//	while(DS18B20_Check());
	DS18B20_Check();
	DS18B20_Write_Byte(0xcc);// skip rom
	DS18B20_Write_Byte(0xbe);// convert	  
	
	delay_ms(700);
	TL=DS18B20_Read_Byte(); // LSB   
	TH=DS18B20_Read_Byte(); // MSB  


	if(TH>7)
	{
		TH=~TH;
		TL=~TL; 
		temp=0;//温度为负  
	}else temp=1;//温度为正	  	  
	tem=TH; //获得高八位
	tem<<=8;    
	tem+=TL;//获得底八位
	tem=(float)tem*0.625;//转换 
	  
	if(temp)return tem; 		//返回温度值
	else return -tem;    
} 

#if 0
#include "ds18b20.h"
#include "delay.h"	

//复位DS18B20
void DS18B20_Rst(void)	   
{
	delay_us(50); 
	DS18B20_IO_OUT(); //SET OUTPUT
  DS18B20_DQ_OUT_0(); //拉低DQ
  delay_us(750);    //拉低750us
  DS18B20_DQ_OUT_1(); //DQ=1 
	delay_us(40);     //40US
}
//等待DS18B20的回应
//返回1:未检测到DS18B20的存在
//返回0:存在
u8 DS18B20_Check(void) 	   
{   
	u8 retry=0;
	DS18B20_IO_IN();//SET INPUT	 
  while (DS18B20_DQ_IN()&&retry<200)
	{
		retry++;
		delay_us(1);
	};	 
	if(retry>=200)return 1;
	else retry=0;
  while (!DS18B20_DQ_IN()&&retry<240)
	{
		retry++;
		delay_us(1);
	};
	if(retry>=240)return 1;	    
	return 0;
}
//从DS18B20读取一个位
//返回值：1/0
u8 DS18B20_Read_Bit(void) 			 // read one bit
{
  u8 data;
	DS18B20_IO_OUT();//SET OUTPUT
  DS18B20_DQ_OUT_0(); 
	delay_us(5);//2
  DS18B20_DQ_OUT_1(); 
	DS18B20_IO_IN();//SET INPUT
	delay_us(5);//12
	if(DS18B20_DQ_IN())data=1;
  else data=0;	 
  delay_us(65);//50           
  return data;
}
//从DS18B20读取一个字节
//返回值：读到的数据
u8 DS18B20_Read_Byte(void)    // read one byte
{        
    u8 i,j,dat;
    dat=0;
	for (i=1;i<=8;i++) 
	{
        j=DS18B20_Read_Bit();
        dat=(j<<7)|(dat>>1);
    }						    
    return dat;
}
//写一个字节到DS18B20
//dat：要写入的字节
void DS18B20_Write_Byte(u8 dat)     
{             
  u8 j;
  u8 testb;
	DS18B20_IO_OUT();//SET OUTPUT;
  for (j=1;j<=8;j++) 
	{
        testb=dat&0x01;
        dat=dat>>1;
        if (testb) 
        {
            DS18B20_DQ_OUT_0();// Write 0
            delay_us(5); //2                           
            DS18B20_DQ_OUT_1();
            delay_us(65); //60            
        }
        else 
        {
            DS18B20_DQ_OUT_0();// Write 0
            delay_us(65); //60            
            DS18B20_DQ_OUT_1();
            delay_us(5); //2                         
        }
    }
}
//开始温度转换
void DS18B20_Start(void)// ds1820 start convert
{   						               
  DS18B20_Rst();	   
	DS18B20_Check();	 
  DS18B20_Write_Byte(0xcc);// skip rom
  DS18B20_Write_Byte(0x44);// convert
} 
//初始化DS18B20的IO口 DQ 同时检测DS的存在
//返回1:不存在
//返回0:存在    	 
u8 DS18B20_Init(void)
{
 	GPIO_InitTypeDef  GPIO_InitStructure;
 	RCC_AHBPeriphClockCmd(DS18B20_GPIO_CLK, ENABLE);	 //使能时钟 
	
 	GPIO_InitStructure.GPIO_Pin = DS18B20_GPIO_PIN;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;  //开漏输出
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;//时钟速率
 	GPIO_Init(DS18B20_GPIO_PORT, &GPIO_InitStructure);

 	GPIO_SetBits(DS18B20_GPIO_PORT,DS18B20_GPIO_PIN);    //输出1

	DS18B20_Rst();

	return DS18B20_Check();
}  
//从ds18b20得到温度值，实际值除以10
//精度：0.1C
//返回值：温度值 （-550~1250） 
short DS18B20_Get_Temp(void)
{
    u8 temp;
    u8 TL,TH;
		short tem;
    DS18B20_Start();                    // ds1820 start convert
    DS18B20_Rst();
    DS18B20_Check();	 
    DS18B20_Write_Byte(0xcc);// skip rom
    DS18B20_Write_Byte(0xbe);// convert	    
    TL=DS18B20_Read_Byte(); // LSB   
    TH=DS18B20_Read_Byte(); // MSB  
	    	  
    if(TH>7)
    {
        TH=~TH;
        TL=~TL; 
        temp=0;//温度为负  
    }else temp=1;//温度为正	  	  
    tem=TH; //获得高八位
    tem<<=8;    
    tem+=TL;//获得底八位
    tem=(float)tem*0.625;//转换 
		if(temp)return tem; //返回温度值
		else return -tem;  
} 

//SET OUTPUT	
void DS18B20_IO_OUT(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = DS18B20_GPIO_PIN;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;  //开漏输出
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;//GPIO_OType_PP;
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;//时钟速率
 	GPIO_Init(DS18B20_GPIO_PORT, &GPIO_InitStructure);
}

//SET INPUT	 
void DS18B20_IO_IN(void)
{
	GPIO_InitTypeDef  GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = DS18B20_GPIO_PIN;		
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;  //输入
  GPIO_InitStructure.GPIO_Speed = GPIO_Speed_10MHz;//时钟速率
 	GPIO_Init(DS18B20_GPIO_PORT, &GPIO_InitStructure);	
}
#endif
